--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Roboto:wght@700&display=swap" rel="stylesheet">
 <style>
   :root { --accent:#2ea44f; --danger:#dc3545; --muted:#b9bbbe; --panel:#2f3136; }
-  html,body{height:100%;margin:0;background:transparent;font-family:Montserrat,Arial,sans-serif;color:#fff;}
+  html,body{height:100%;margin:0;background:#0f0f11;font-family:Montserrat,Arial,sans-serif;color:#fff;}
   /* container adjusted to fit viewport while keeping your visuals */
   #flipToolContainer{
     position:fixed; top:24px; left:50%; transform:translateX(-50%);
